[package]
name = "cyberpunk_init_storage"
version = "0.1.0"
edition = "2021"
authors = ["yugogamer <yugogamer@gmail.com>"]

[workspace]
members = [
    "shared",
]

[[bin]]
name = "cyberpunk_init_storage"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.32"
actix-web-httpauth = "0.8.0"
jwt = "0.16.0"
sqlx = { version = "0.6.1", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono", "offline", "uuid" ] }
chrono = { version = "0.4", features = ["serde"] }
rust-argon2 = "1.0"
uuid = {version = "1.3.0", features = ["serde", "v4"]}
rand = "0.8.5"
base64 = "0.13.0"
sha2 = "0.10.2"
hmac = "0.12.1"
cookie = "0.17.0"
async-trait = "0.1.59"
juniper = {version="0.15.11", features=["uuid", "chrono", "graphql-parser", "serde_json"]}
actix-cors = "0.6.4"
rust-s3 = "0.33.0"
log = "0.4.17"
sea-orm = "0.11.2"

[profile.dev.package.sqlx-macros]
opt-level = 3
